--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yiling Nan's Homepage"
+title                    : "Wenhui Li's Homepage"
 title_separator          : "-"
-name                     : &name "Yiling Nan"
+name                     : &name "Wenhui Li"
 description              : &description "Homepage of Yiling Nan"
 url                      : https://hongo10.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
