--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Welcome to Jekyl!
+# Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yiling Nan"
+  name             : "Wenhui Li"
   avatar           : "Profile.jpeg"
   bio              : "Postdoctoral Research Fellow\n<a href='https://mackerell.umaryland.edu/'>Alex MacKerell Group</a>" 
   location         : "Baltimore MD"
