--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Wenhui Li's Homepage"
 title_separator          : "-"
 name                     : &name "Wenhui Li"
-description              : &description "Homepage of Yiling Nan"
+description              : &description "Homepage of Wenhui Li"
 url                      : https://wenhuili324.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "hongo10/hongo10.github.io"
+repository               : "wenhuili324/wenhuili324.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,13 +82,13 @@ analytics:
 author:
   name             : "Wenhui Li"
   avatar           : "Profile.jpeg"
-  bio              : "Postdoctoral Research Fellow\n<a href='https://mackerell.umaryland.edu/'>Alex MacKerell Group</a>" 
-  location         : "Baltimore MD"
-  employer         : "University of Maryland" 
+  bio              : "Postdoctoral Researcher\n<a href='https://jadhaolab.engineering.indiana.edu/group.html'>Vikram Jadhao Group</a>" 
+  location         : "Bloomington IN, USA"
+  employer         : "Indiana University" 
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=gRWvx3YAAAAJ&hl=en"
-  email            : "yiling.nan@rx.umaryland.edu"
-  researchgate     : "https://www.researchgate.net/profile/Yiling-Nan"# example: "https://www.researchgate.net/profile/yourprofile"
+  googlescholar    : "https://scholar.google.com/citations?user=zIo3NqEAAAAJ&hl=en"
+  email            : "wli11@iu.edu"
+  researchgate     : "https://www.researchgate.net/profile/Wenhui-Li-23"# example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,14 +96,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "hongo10"
+  github           : "wenhuili324"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "yiling-nan-98a925aa"
-  orcid            : "https://orcid.org/0000-0001-8654-6423"
+  linkedin         : "wenhui-li-58ba85201"
+  orcid            : "https://orcid.org/0000-0001-5080-1111"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
